<resources>
    <string name="app_name">Computer Vision</string>

    <!-- Image strings -->
    <string name="title_activity_image">Feature Detection</string>
    <string name="action_gabor">Gabor Filter</string>
    <string name="action_energy_gabor">Energy of gabor</string>
    <string name="action_harries">Harries Corner Detector</string>
    <string name="action_reset">Reset Image</string>
    <string name="action_canny">Canny Edge Detector</string>
    <string name="action_gaussian">Gaussian Blur</string>

    <!-- Video strings -->
    <string name="title_activity_video">Motion</string>
    <string name="action_video_gabor_direction_static">Gabor - Static</string>
    <string name="action_video_gabor_direction_left">Gabor - Left</string>
    <string name="action_video_gabor_direction_flicker">Gabor - Flicker</string>
    <string name="action_video_gabor_direction_right">Gabor - Right</string>
    <string name="action_video_9tab">9-tap filter</string>
    <string name="action_feature_descriptor">Feature Descriptor</string>
    <string name="title_activity_feature">FeatureActivity</string>
</resources>
